Implementing UseEmptyHeader and fixing issue in account balance account id should be string in query
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41315

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
@@ -9,6 +9,9 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.title" label="Header" isrequired="true"></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-switch value="scopeModel.useEmptyHeader" label="Empty header" isrequired="true"></vr-switch>
+                        </vr-columns>
                         <vr-common-gridcolcssclass-selector on-ready="scopeModel.onGridColCSSClassSelectorReady" normal-col-num="6"></vr-common-gridcolcssclass-selector>
                     </vr-row>
                 </vr-tab>
