support null cost rate in billing reports
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41316

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlProfitByZone.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlProfitByZone.rdlc
@@ -305,7 +305,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Cos Net</Value>
+                              <Value>Cost Net</Value>
                               <Style>
                                 <FontWeight>SemiBold</FontWeight>
                                 <Color>DarkRed</Color>
