refactoring zajil invoice and integrate multinet invoice with financial account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41324

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceReport.rdlc
@@ -2203,7 +2203,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
               </TablixCells>
@@ -2231,7 +2230,7 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSet1</DataSetName>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>4.37542in</Top>
         <Left>0.10865in</Left>
         <Height>0.75in</Height>
@@ -2522,7 +2521,7 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="RDLCRetail">
       <Query>
         <DataSourceName>RetailMultiNetEntities</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
