--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
@@ -10,6 +10,9 @@
                  tooltip="dataItem.RateChangeTypeIconTooltip" inline>
         </vr-icon>
     </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="''" fixedwidth="'70'">
+        <vr-whs-be-services-viewer on-ready="dataItem.onRPServiceViewerReady"></vr-whs-be-services-viewer>
+    </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'"></vr-datagridcolumn>
 </vr-datagrid>
