Implementing financial transaction below financial account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41332

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountGridTemplate.html
@@ -3,9 +3,13 @@
              pagingtype="'Pager'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="FinancialAccountId">
+             idfield="FinancialAccountId"
+             showexpand="scopeModel.showFinancialTransactionGrid">
     <vr-datagridcolumn headertext="'ID'" field="'SequenceNumber'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type'" field="'FinancialAccountDefinitionName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'" widthfactor="'20'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
