--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountViewDefinition/Templates/AccountViewDefinitionEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountViewDefinition/Templates/AccountViewDefinitionEditor.html
@@ -19,7 +19,9 @@
                     <retail-be-accountviewdefinitionsettings on-ready="scopeModel.onAccountViewDefinitionSettingsReady" normal-col-num="6"></retail-be-accountviewdefinitionsettings>
                 </vr-tab>
                 <vr-tab header="'Condition'">
-                    <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady" normal-col-num="6"></retail-be-accountcondition-selective>
+                    <vr-row>
+                        <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady" normal-col-num="6"></retail-be-accountcondition-selective>
+                    </vr-row>
                 </vr-tab>
             </vr-tabs>
            
