--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/AccountChargeEvaluators/Templates/AccountChargeEvaluatorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/AccountChargeEvaluators/Templates/AccountChargeEvaluatorTemplate.html
@@ -1,5 +1,4 @@
-﻿
-<vr-row>
+﻿<vr-row>
     <vr-columns width="1/2row">
         <vr-select on-ready="scopeModel.onSelectorReady"
                    datasource="scopeModel.templateConfigs"
@@ -14,5 +13,3 @@
                          on-ready="scopeModel.onDirectiveReady" customvalidate="ctrl.customvalidate" normal-col-num="{{ctrl.normalColNum}}" isrequired="ctrl.isrequired">
     </vr-directivewrapper>
 </vr-row>
-
-
