--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/AccountRecurringChargeRule/Templates/RecurringChargeRuleEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/AccountRecurringChargeRule/Templates/RecurringChargeRuleEditor.html
@@ -16,9 +16,11 @@
                                               normal-col-num="6" isrequired="true">
             </retail-be-accountchargeevaluator>
 
-            <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady"
-                                                  normal-col-num="6">
-            </retail-be-accountcondition-selective>
+            <vr-row>
+                <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady"
+                                                      normal-col-num="6">
+                </retail-be-accountcondition-selective>
+            </vr-row>
 
         </vr-form>
     </vr-modalbody>
