--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountCondition/Templates/AccountConditionSelectiveTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountCondition/Templates/AccountConditionSelectiveTemplate.html
@@ -1,15 +1,15 @@
-﻿<vr-row>
-    <vr-columns colnum="{{ctrl.normalColNum}}">
-        <vr-select on-ready="scopeModel.onSelectorReady"
-                   datasource="scopeModel.templateConfigs"
-                   selectedvalues="scopeModel.selectedTemplateConfig"
-                   datavaluefield="ExtensionConfigurationId"
-                   datatextfield="Title"
-                   isrequired="false"
-                   label="Availability Condition">
-        </vr-select>
-    </vr-columns>
-</vr-row>
-<vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" vr-loader="scopeModel.isLoadingDirective"
-                     on-ready="scopeModel.onDirectiveReady" customvalidate="ctrl.customvalidate" normal-col-num="{{ctrl.normalColNum}}" isrequired="ctrl.isrequired">
-</vr-directivewrapper>
+﻿<vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-select on-ready="scopeModel.onSelectorReady"
+                datasource="scopeModel.templateConfigs"
+                selectedvalues="scopeModel.selectedTemplateConfig"
+                datavaluefield="ExtensionConfigurationId"
+                datatextfield="Title"
+                isrequired="false"
+                label="Availability Condition">
+    </vr-select>
+</vr-columns>
+<vr-columns colnum="12" >
+    <vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" vr-loader="scopeModel.isLoadingDirective"
+                            on-ready="scopeModel.onDirectiveReady" customvalidate="ctrl.customvalidate" normal-col-num="12" isrequired="ctrl.isrequired">
+    </vr-directivewrapper>
+</vr-columns>
