--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/Templates/AccountActionDefinitionEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/Templates/AccountActionDefinitionEditor.html
@@ -19,10 +19,12 @@
                     <retail-be-accountactiondefinitionsettings on-ready="scopeModel.onAccountActionDefinitionSettingsReady" normal-col-num="6"></retail-be-accountactiondefinitionsettings>
                 </vr-tab>
                 <vr-tab header="'Condition'">
-                    <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady" normal-col-num="6"></retail-be-accountcondition-selective>
+                    <vr-row>
+                        <retail-be-accountcondition-selective on-ready="scopeModel.onAccountConditionSelectiveReady" normal-col-num="6"></retail-be-accountcondition-selective>
+                    </vr-row>
                 </vr-tab>
             </vr-tabs>
-           
+
         </vr-form>
     </vr-modalbody>
     <div>
