--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -95,6 +95,10 @@
                         <vr-columns width="1/2row">
                             <vr-switch value="scopeModel.isAToZ" label="A to Z Pricelist"></vr-switch>
                         </vr-columns>
+                        <vr-whs-be-pricelistextensionformat-selector on-ready="scopeModel.onPriceListExtensionFormatSelectorReady"
+                                                                     normal-col-num="6"
+                                                                     isrequired="false">
+                        </vr-whs-be-pricelistextensionformat-selector>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Supplier Settings'" ng-if="scopeModel.showZoneServiceConfig">
