--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
@@ -9,7 +9,7 @@
     <vr-datagridcolumn headertext="'Number'" field="'Description'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account'" field="'AccountName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Number Of Channels'" type="'Number'" field="'Entity.Settings.NumberOfChannels'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'SO Number'" type="'Number'" field="'Entity.Settings.DIDSo'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'SO Number'" field="'Entity.Settings.DIDSo'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'International'" field="'Entity.Settings.IsInternational'">
         <span ng-show="{{dataItem.Entity.Settings.IsInternational}}">
             <vr-icon icontype="dataItem.Entity.Settings.IsInternational"></vr-icon>
