--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRRule/VRRuleDefinition/Templates/VRRuleDefinitionSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRRule/VRRuleDefinition/Templates/VRRuleDefinitionSettingsTemplate.html
@@ -1,11 +1,16 @@
 ﻿<vr-tabs>
     <vr-tab header="'Definition'">
-
         <vr-row>
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
         </vr-row>
-
+    </vr-tab>
+    <vr-tab header="'Settings'">
+        <vr-row>
+            <vr-common-ruledefinition-extendedsettings on-ready="scopeModel.onVRRuleDefinitionExtendedSettingsDirectiveReady" 
+                                                       normal-col-num="6">
+            </vr-common-ruledefinition-extendedsettings>
+        </vr-row>
     </vr-tab>
 </vr-tabs>
