Remove name from header
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41358

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/CustomerSellingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/CustomerSellingProductGridTemplate.html
@@ -8,8 +8,8 @@
              defaultsortbyfieldname="'CustomerName'" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CustomerSellingProductId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Customer Name'" field="'CustomerName'" type="'Text'" ng-show="!hideCustomerColumn"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Selling Product Name'" field="'SellingProductName'" type="'Text'" ng-show="!hideSellingProductColumn"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Customer'" field="'CustomerName'" type="'Text'" ng-show="!hideCustomerColumn"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Selling Product'" field="'SellingProductName'" type="'Text'" ng-show="!hideSellingProductColumn"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Effective On'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
 
 </vr-datagrid>
