change the sorting of grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41366

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
@@ -3,6 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
+             defaultsortbyfieldname="'CountryName'"
              idfield="Entity.CodeGroupId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CodeGroupId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
