--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/ZoneServiceConfig/Templates/ZoneServiceConfigGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/ZoneServiceConfig/Templates/ZoneServiceConfigGridTemplate.html
@@ -4,6 +4,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
+             defaultsortbyfieldname="'Entity.Settings.Weight'"
              idfield="Entity.ZoneServiceConfigId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.ZoneServiceConfigId'" type="'Text'"></vr-datagridcolumn>
