--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.PriceListId" defaultsortbyfieldname="'Entity.PriceListId'" defaultsortdirection="'DESC'" enableautoexport="true">
+             idfield="Entity.PriceListId" defaultsortbyfieldname="'Entity.CreatedTime'" defaultsortdirection="'DESC'" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.PriceListId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Customer Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
