--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
@@ -6,7 +6,7 @@
              menuactions="gridMenuActions"
              idfield="Entity.SellingProductId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SellingProductId'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Description'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlanName'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
