--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/StateBackup/Templates/StateBackupGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/StateBackup/Templates/StateBackupGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              on-ready="onGridReady"
-             menuactions="gridMenuActions" defaultsortbyfieldname="'Entity.StateBackupId'" defaultsortdirection="'DESC'">
+             menuactions="gridMenuActions" defaultsortbyfieldname="'Entity.BackupDate'" defaultsortdirection="'DESC'">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.StateBackupId'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type'" field="'Type'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Description'"></vr-datagridcolumn>
