--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Extensions/SwapDeal/RouteRuleCriteria/Templates/SwapDealRouteRuleCriteriaDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Extensions/SwapDeal/RouteRuleCriteria/Templates/SwapDealRouteRuleCriteriaDirective.html
@@ -1,1 +1,14 @@
-﻿
+﻿<vr-row>
+    <vr-columns width="1/2row">
+        <vr-whs-deal-dealdefinition-selector on-ready="scopeModel.onDealDefinitionSelectorReady" isrequired="true" hideremoveicon
+                                             selectedvalues="scopeModel.selectedDeal" onselectionchanged="scopeModel.onDealDefinitionSelectionChanged"></vr-whs-deal-dealdefinition-selector>
+    </vr-columns>
+</vr-row>
+<vr-row>
+    <vr-columns width="1/2row">
+        <span ng-if="scopeModel.selectedDeal!=undefined" vr-loader="scopeModel.isLoadingSaleZone">
+            <vr-whs-be-salezone-selector on-ready="scopeModel.onSaleZoneSelectorReady" ismultipleselection></vr-whs-be-salezone-selector>
+        </span>
+    </vr-columns>
+</vr-row>
+
