--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteRule/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteRule/RouteRuleEditor.html
@@ -12,6 +12,16 @@
                                                                        hideremoveicon>
                             </vr-whs-routing-routerulesettings-selector>
                         </vr-columns>
+
+                        <vr-columns width="1/4row" ng-show="false">
+                            <vr-whs-routing-routerulecriteria-selector on-ready="scopeModel.onRouteRuleCriteriaSelectorReady"
+                                                                       selectedvalues="scopeModel.selectedRouteRuleCriteriaTemplate"
+                                                                       onselectionchanged="scopeModel.onRouteRuleCriteriaSelectionChanged"
+                                                                       isrequired="true"
+                                                                       hideremoveicon>
+                            </vr-whs-routing-routerulecriteria-selector>
+                        </vr-columns>
+
                         <vr-columns width="1/4row">
                             <vr-textbox value="scopeModel.routeRuleName" label="Name"></vr-textbox>
                         </vr-columns>
@@ -20,72 +30,8 @@
 
                 <vr-tab header="'Criteria'" ng-show="scopeModel.showCriteriaSection">
                     <vr-row>
-                        <vr-columns width="1/2row" ng-show="scopeModel.showRouteRuleTypeFilterSection">
-                            <span vr-disabled="scopeModel.disableCriteria">
-                                <vr-select datatextfield="description" datavaluefield="value" label="Filter By" datasource="scopeModel.routeRuleCriteriaTypes"
-                                           selectedvalues="scopeModel.selectedRouteRuleCriteriaType" onselectionchanged="scopeModel.onRouteRuleCriteriaTypeSelectionChanged" hideremoveicon />
-                            </span>
-                        </vr-columns>
-                    </vr-row>
-                    <vr-row ng-if="scopeModel.showSaleZoneSection">
-                        <vr-columns width="fullrow">
-                            <vr-section title="Sale Zone" vr-loader="scopeModel.isLoadingSaleZoneGroup">
-                                <vr-whs-be-salezonegroup on-ready="scopeModel.onSaleZoneGroupSettingsDirectiveReady"></vr-whs-be-salezonegroup>
-                            </vr-section>
-                        </vr-columns>
-                    </vr-row>
-                    <vr-row ng-if="scopeModel.showIncludedCodeSection">
-                        <vr-columns width="fullrow">
-                            <vr-section title="Included Codes">
-                                <vr-columns width="1/4row">
-                                    <span vr-disabled="scopeModel.disableCriteria">
-                                        <vr-select datatextfield="Name" datavaluefield="TemplateConfigID" label="Filter Type" datasource="scopeModel.codeCriteriaGroupTemplates" text="None"
-                                                   selectedvalues="scopeModel.selectedCodeCriteriaGroupTemplate">
-                                        </vr-select>
-                                    </span>
-                                </vr-columns>
-                                <vr-columns width="3/4row" ng-if="scopeModel.selectedCodeCriteriaGroupTemplate" vr-loader="scopeModel.isLoadingCodeCriteriaSection">
-                                    <vr-directivewrapper directive="scopeModel.selectedCodeCriteriaGroupTemplate.Editor" on-ready="scopeModel.onCodeCriteriaGroupSettingsDirectiveReady" disableadding="scopeModel.disableCriteria"></vr-directivewrapper>
-                                </vr-columns>
-                            </vr-section>
-                        </vr-columns>
-                    </vr-row>
-                    <vr-row ng-show="scopeModel.showExcludedCodeSection">
-                        <vr-columns width="fullrow">
-                            <vr-section title="Excluded Codes">
-                                <vr-row haschildcolumns>
-                                    <vr-columns colnum="3">
-                                        <vr-textbox value="scopeModel.excludedCode" type="number" onvaluechanged="ctrl.onvaluechanged" label="Enter code to exclude" minvalue="0" decimalprecision="0"></vr-textbox>
-                                    </vr-columns>
-                                    <vr-columns colnum="1" withemptyline>
-                                        <div>
-                                            <vr-button type="Add" vr-disabled="ctrl.disableButton" data-onclick="scopeModel.addExcludedCode" standalone></vr-button>
-                                        </div>
-                                    </vr-columns>
-                                </vr-row>
-                                <vr-validator validate="scopeModel.validateExcludedCodes()">
-                                    <vr-row haschildcolumns>
-                                        <vr-columns width="fullrow">
-                                            <div>
-                                                <vr-label>Excluded Codes</vr-label>
-                                            </div>
-
-                                            <vr-datalist maxitemsperrow="4" enabletitle datasource="scopeModel.excludedCodes" autoremoveitem="true">
-                                                {{dataItem}}
-                                            </vr-datalist>
-                                        </vr-columns>
-                                    </vr-row>
-                                </vr-validator>
-                            </vr-section>
-                        </vr-columns>
-                    </vr-row>
-                    <vr-row ng-show="scopeModel.showCustomerSection">
-                        <vr-columns width="fullrow">
-                            <vr-section title="Customers">
-                                <span vr-disabled="scopeModel.disableCriteria">
-                                    <vr-whs-be-customergroup on-ready="scopeModel.onCustomerGroupSettingsDirectiveReady"></vr-whs-be-customergroup>
-                                </span>
-                            </vr-section>
+                        <vr-columns width="fullrow" vr-loader="scopeModel.isLoadingRouteRuleCriteria">
+                            <vr-directivewrapper directive="scopeModel.selectedRouteRuleCriteriaTemplate.Editor" on-ready="scopeModel.onRouteRuleCriteriaDirectiveReady" />
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
