--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteRule/Templates/RouteRuleGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteRule/Templates/RouteRuleGridTemplate.html
@@ -8,8 +8,8 @@
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.RuleId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Included Codes'" field="'IncludedCodes'" ng-show="hideIncludedCodesColumn"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Customers'" field="'Customers'" ng-show="hideCustomerColumn"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Included Codes'" field="'IncludedCodes'" ng-show="showIncludedCodesColumn"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Customers'" field="'Customers'" ng-show="showCustomerColumn"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Sale Zones'" field="'SaleZones'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rule Type'" field="'RouteRuleSettingsTypeName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BeginEffectiveTime'" type="'LongDatetime'"></vr-datagridcolumn>
