--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
@@ -2,12 +2,15 @@
              on-ready="onGridReady"
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
-             menuactions="gridMenuActions" enableautoexport="true">
-    <!--<vr-datagridcolumn headertext="'ID'" field="'Entity.SupplierZoneServiceId'" type="'Text'"></vr-datagridcolumn>-->
+             menuactions="gridMenuActions" idfield="SupplierZoneServiceId"  enableautoexport="true">
+    <vr-datagridcolumn headertext="'ID'" field="'SupplierZoneServiceId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Services'" field="'Services'" disablesorting>
-        <vr-whs-be-services-viewer on-ready="dataItem.onServiceReady"></vr-whs-be-services-viewer>
+    <vr-datagridcolumn headertext="'Services'" fixedwidth="100" disablesorting>
+        <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Datetime'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Datetime'"></vr-datagridcolumn>
+    <vr-datagridcolumn fixedwidth="25">
+        <vr-icon icontype="dataItem.iconType"></vr-icon>
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Datetime'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Datetime'"></vr-datagridcolumn>
 </vr-datagrid>
