--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
@@ -1,9 +1,32 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div vr-modalcontent ng-controller="WhS_BE_SupplierServiceEditorController" vr-loader="isLoading">
+    <vr-modalbody>
+        <vr-form name="formSupplierServiceEditor">
+            <vr-row removeline>
+                <vr-columns width="1/2row">
+                    <span vr-loader="scopeModel.isLoadingZoneServiceConfigSelector">
+                        <vr-whs-be-zone-service-config-selector on-ready="scopeModel.onZoneServiceConfigSelectorReady"
+                                                                selectedvalues="scopeModel.zoneServiceConfigSelectedValues"
+                                                                onselectitem="scopeModel.onServiceItemSelected"
+                                                                ondeselectitem="scopeModel.onServiceItemDeSelected"
+                                                                isrequired="true"
+                                                                ismultipleselection="true">
+                        </vr-whs-be-zone-service-config-selector>
+                    </span>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-datetimepicker type="dateTime" label="BED" value="scopeModel.bed" isrequired></vr-datetimepicker>
+                </vr-columns>
+            </vr-row>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <span >
+                    <vr-button type="Save" formname="formSupplierServiceEditor" data-onclick="scopeModel.saveSupplierService" vr-disabled="scopeModel.isSaveButtonDisabled"></vr-button>
+                </span>
+                    <vr-button type="Close" data-onclick="close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
