Region Business Entity Finalizing
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41420

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/City/Templates/CityGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/City/Templates/CityGridTemplate.html
@@ -7,6 +7,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CityId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'City Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Country'" field="'CountryName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Region'" field="'RegionName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
