--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
@@ -6,11 +6,13 @@
                     <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
                 <span vr-disabled="disableCountry">
-
                     <vr-columns width="1/2row" haschildcolumns>
-                        <vr-common-country-selector on-ready="onCountryDirectiveReady" isrequired="true" showaddbutton></vr-common-country-selector>
+                        <vr-common-country-selector on-ready="onCountryDirectiveReady" isrequired="true" onselectionchanged="onCountrySelectionChanged" showaddbutton></vr-common-country-selector>
                     </vr-columns>
                 </span>
+                <vr-columns width="1/2row" vr-loader="isLoadingRegions" haschildcolumns>
+                    <vr-common-region-selector on-ready="onRegionDirectiveReady"></vr-common-region-selector>
+                </vr-columns>
             </vr-row>
         </vr-form>
     </vr-modalbody>
