adding vr-whs-be-salepricelisttype-selector.js
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41423

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -71,4 +71,14 @@
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="SendEmail" formname="formSalePriceListPreview" data-onclick="scopeModel.SendPriceListByEmail"></vr-button>
+                <!--<vr-button type="Download" formname="formSalePriceListPreview" data-onclick="scopeModel.DownloadPriceList"></vr-button>-->
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+            </div>
+        </vr-actionbar>
+
+    </div>
 </div>
