--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/ProductInfoTechnicalSettings/Templates/ProductInfoTechnicalSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/ProductInfoTechnicalSettings/Templates/ProductInfoTechnicalSettingsTemplate.html
@@ -1,12 +1,12 @@
 ﻿
 <vr-columns width="fullrow">
     <vr-tabs>
-        <vr-tab header="'Product Informations'">
+        <vr-tab header="'Product Info'">
             <vr-columns width="1/2row">
-                <vr-textbox label="Name" value="scopeModel.productName"></vr-textbox>
+                <vr-textbox label="Name" value="scopeModel.productName" readonly></vr-textbox>
             </vr-columns>
             <vr-columns width="1/2row">
-                <vr-textbox label="Version Number" value="scopeModel.versionNumber"></vr-textbox>
+                <vr-textbox label="Version Number" value="scopeModel.versionNumber" readonly></vr-textbox>
             </vr-columns>
         </vr-tab>
     </vr-tabs>
